src/objects/EP_Log_Interface__c.object
<CustomObject>
    <description>EP Log: Used for reporting of integration interface data transactions.  
Track number of records:
Total, valid records, invalid records, confirmed duplicates, suspected duplicates, successful records, failed records</description>
    <fields>
        <fullName>Confirmed__c</fullName>
        <description>Number of confirmed duplicates</description>
        <label>Confirmed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <description>Data source detail</description>
        <label>Dealer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EpRunId__c</fullName>
        <description>Parent BTL ID</description>
        <label>EpRunId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failed__c</fullName>
        <description>Number of failed records</description>
        <label>Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interface__c</fullName>
        <description>Data source or interface name</description>
        <label>Interface</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid__c</fullName>
        <description>Number of invalid records</description>
        <label>Invalid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <description>Business Object, e.g. Contact, Lead</description>
        <label>ObjectName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Customer_Data_Volumn__c</fullName>
        <formula>IF(ObjectName__c == &apos;Customer&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Data Volumn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Incl_Camp_Info__c</fullName>
        <formula>IF(ObjectName__c== &apos;CampaignMember&apos;, &apos;Yes&apos;, &apos;NO&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incl. Camp. Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Incl_Contact_Info__c</fullName>
        <formula>IF(ObjectName__c== &apos;Customer&apos;, &apos;Yes&apos;, &apos;NO&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incl. Contact Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Incl_Lead_Info__c</fullName>
        <formula>IF(ObjectName__c== &apos;Lead&apos;, &apos;Yes&apos;, &apos;NO&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incl. Lead Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_New_Camp_Registeration__c</fullName>
        <formula>IF (AND (ObjectName__c==&apos;CampaignMember&apos;, Confirmed__c &gt; 0), 0, if( ObjectName__c==&apos;CampaignMember&apos;, Total__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Camp. Registeration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_New_Contact__c</fullName>
        <formula>IF (AND (ObjectName__c==&apos;Customer&apos;, Confirmed__c &gt; 0), 0, if( ObjectName__c==&apos;Customer&apos;, Total__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_New_Lead__c</fullName>
        <formula>IF (AND (ObjectName__c==&apos;Lead&apos;, Confirmed__c &gt; 0), 0, if( ObjectName__c==&apos;Lead&apos;, Total__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_New_Vehicle__c</fullName>
        <formula>IF (AND (ObjectName__c==&apos;Vehicle&apos;, Confirmed__c &gt; 0), 0, if( ObjectName__c==&apos;Vehicle&apos;, Total__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Vehicle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Remark__c</fullName>
        <label>Remark</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Update_Camp_Registeration__c</fullName>
        <formula>IF(ObjectName__c==&apos;CampaignMember&apos;,Confirmed__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update Camp. Registeration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Update_Contact__c</fullName>
        <formula>IF(ObjectName__c==&apos;Customer&apos;,Confirmed__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Update_Lead__c</fullName>
        <formula>IF(ObjectName__c==&apos;Lead&apos;,Confirmed__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Update_Vehicle__c</fullName>
        <formula>IF(ObjectName__c==&apos;Vehicle&apos;,Confirmed__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update Vehicle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RunDate__c</fullName>
        <description>Timestamp of interface run</description>
        <label>RunDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Successful__c</fullName>
        <description>Number of successful records</description>
        <label>Successful</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suspected__c</fullName>
        <description>Number of suspected duplicates</description>
        <label>Suspected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>Total number of records</description>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Validation or Deduplication</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Validation</fullName>
                </value>
                <value>
                    <fullName>Deduplication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <description>Number of valid records</description>
        <label>Valid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>EP Log Interface</label>
    <listViews>
        <fullName>All</fullName>
        <columns>EpRunId__c</columns>
        <columns>RunDate__c</columns>
        <columns>Interface__c</columns>
        <columns>ObjectName__c</columns>
        <columns>Failed__c</columns>
        <columns>Successful__c</columns>
        <columns>Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EPLIF={0000000}</displayFormat>
        <label>EP Log Interface ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EP Log Interface</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>